customer stuff is done